# pong-ping

./: CMakeLists.txt  LICENSE  to-do.txt
include/: fontloader.h  fontmanager.h  fonts.h  game.hpp  menu.hpp  player.h
src/: fontloader.cpp  fontmanager.cpp  game.cpp  main.cpp  menu.cpp  player.cpp
